--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <title>Jill Kuchman | Web Developer</title>
 
+    <!-- favicon -->
+    <link rel="shortcut icon" type="image/png" href="img/favicon-circle-small.png"/>
+
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -172,7 +175,7 @@
             </div>
             <div class="row">
               <div class="col-sm-4">
-                    <img src="img/profile.png" class="img-responsive" alt="A photo of my face"/>
+                    <img src="img/profilephoto.png" class="img-responsive" alt="A photo of my face"/>
               </div>
                 <div class="col-lg-4">
                     <p>I am a graduate of Epicodus, a hands-on programming bootcamp, where I learned the fundamentals of PHP and Javascript within frameworks such as Drupal and AngularJS.</p>
