Fix photos and links

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
+                  <img class="img-responsive" src="img/profilephoto.png" alt="">
+
                     <div class="intro-text">
                         <span class="name">Jill Kuchman</span>
                         <hr>
@@ -175,7 +177,7 @@
             </div>
             <div class="row">
               <div class="col-sm-4">
-                    <img src="img/profilephoto.png" class="img-responsive" alt="A photo of my face"/>
+                    <img src="img/boop.png" class="img-responsive" alt="A photo of my face"/>
               </div>
                 <div class="col-lg-4">
                     <p>I am a graduate of Epicodus, a hands-on programming bootcamp, where I learned the fundamentals of PHP and Javascript within frameworks such as Drupal and AngularJS.</p>
@@ -259,7 +261,7 @@
                                 <a href="https://instagram.com/jillipede/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
                             </li>
                             <li>
-                                <a href="https://github.com/jillkuchman" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
+                                <a href="https://twitter.com/JillKuchman" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/jillkuchman" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a>
