--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
     <title>Jill Kuchman | Web Developer</title>
 
-    <!-- favicon -->
+    <!-- Favicon -->
     <link rel="shortcut icon" type="image/png" href="img/favicon-circle-small.png"/>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <!-- <link href="css/freelancer.css" rel="stylesheet"> -->
@@ -26,7 +27,6 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -60,7 +60,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">Work</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -80,8 +80,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                  <img class="img-responsive" src="img/profilephoto.png" alt="">
-
                     <div class="intro-text">
                         <span class="name">Jill Kuchman</span>
                         <hr>
@@ -97,7 +95,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>My Work</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -177,7 +175,7 @@
             </div>
             <div class="row">
               <div class="col-sm-4">
-                    <img src="img/boop.png" class="img-responsive" alt="A photo of my face"/>
+                    <img src="img/profilephoto.png" class="img-responsive profile" alt="A photo of my face"/>
               </div>
                 <div class="col-lg-4">
                     <p>I am a graduate of Epicodus, a hands-on programming bootcamp, where I learned the fundamentals of PHP and Javascript within frameworks such as Drupal and AngularJS.</p>
