--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="col-lg-12">
                     <div class="intro-text">
                         <span class="name">Jill Kuchman</span>
-                        <hr>
+                        <!-- <hr class="star-light"> -->
                         <span class="skills">Web Developer</span>
                     </div>
                 </div>
