--- a/index.html
+++ b/index.html
@@ -253,16 +253,13 @@
                     <div class="footer-col col-lg-12">
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/jill.kuchman" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://instagram.com/jillipede/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
-                            </li>
-                            <li>
                                 <a href="https://twitter.com/JillKuchman" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/jillkuchman" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a>
+                            </li>
+                            <li>
+                                <a href="http://codepen.io/jkuchman/" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-codepen"></i></a>
                             </li>
                             <li>
                                 <a href="https://github.com/jillkuchman" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-github"></i></a>
