Add screenshot of pizza site

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/adas-technical-books.png" class="img-responsive" alt="Screenshot of the Adas Technical Books website.">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -117,7 +117,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/adopt-an-epicoder.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -127,7 +127,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/pizza.png" class="img-responsive" alt="A screenshot of the Order A Pizza app.">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -178,7 +178,7 @@
                     <img src="img/profilephoto.png" class="img-responsive profile" alt="A photo of my face"/>
               </div>
                 <div class="col-lg-4">
-                    <p>I am a graduate of Epicodus, a hands-on programming bootcamp, where I learned the fundamentals of PHP and Javascript within frameworks such as Drupal and AngularJS.</p>
+                    <p>I'm Jill, a web developer with a passion for front-end development. I graduated from <a href="http://www.epicodus.com/" target="_blank">Epicodus</a>, a hands-on programming bootcamp, where I learned the fundamentals of PHP and Javascript within frameworks such as Drupal and AngularJS.</p>
                     <p>Previously, I earned my B.S. in Materials Science and Engineering, with a focus on electronic materials and semiconductor technology.</p>
                 </div>
                 <div class="col-lg-4">
@@ -305,7 +305,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/adas-technical-books.png" class="img-responsive img-centered" alt="A screenshot of the Ada's Technical Books website.">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -342,7 +342,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/adopt-an-epicoder.png" class="img-responsive img-centered" alt="Screenshot of the Adopt An Epicoder website.">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
@@ -379,7 +379,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/pizza.png" class="img-responsive img-centered" alt="A screenshot of the Order A Pizza app.">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
