--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/tamacrotchety.png" class="img-responsive" alt="A screenshot of the Tamacrotchety app.">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -416,7 +416,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/tamacrotchety.png" class="img-responsive img-centered" alt="A screenshot of the Tamacrotchety app.">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
