add more changes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
                 <div class="col-lg-12">
                     <div class="intro-text">
                         <span class="name">Jill Kuchman</span>
-                        <!-- <hr class="star-light"> -->
                         <span class="skills">Web Developer</span>
                     </div>
                 </div>
@@ -147,10 +146,10 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/epifoodus.png" class="img-responsive" alt="A screenshot of the Epifoodus app.">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <!-- <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -160,7 +159,7 @@
                         <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
                     </a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -179,7 +178,7 @@
               </div>
                 <div class="col-lg-4">
                     <p>I'm Jill, a web developer with a passion for front-end development. I graduated from <a href="http://www.epicodus.com/" target="_blank">Epicodus</a>, a hands-on programming bootcamp, where I learned the fundamentals of PHP and Javascript within frameworks such as Drupal and AngularJS.</p>
-                    <p>Previously, I earned my B.S. in Materials Science and Engineering, with a focus on electronic materials and semiconductor technology.</p>
+                    <p>Previously, I earned my B.S. in Materials Science and Engineering from the University of Washington, with a focus on electronic materials and semiconductor technology.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>In my free time, I like exploring the world through running shoes, hiking boots, vegetables, and books.</p>
@@ -197,13 +196,24 @@
                 <div class="col-lg-12 text-center">
                     <h2>Contact Me</h2>
                     <hr class="star-primary">
+                    <p>Are you looking for a versatile web developer on your team or for your next project?</p>
+                    <p>I am currently looking for opportunities in the Portland area. Feel free to contact me via <a href="https://www.linkedin.com/in/jillkuchman">LinkedIn</a>.</P
+                </div>
+            </div>
+        </div>
+    </section>
+<!--         <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Contact Me</h2>
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+ -->                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
                     <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
+<!--                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
@@ -243,7 +253,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="text-center">
@@ -273,7 +283,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Jill Kuchman 2015
+                        <p>Copyright &copy; Jill Kuchman 2015</p>
                     </div>
                 </div>
             </div>
@@ -300,25 +310,26 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Ada's Technical Books</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/adas-technical-books.png" class="img-responsive img-centered" alt="A screenshot of the Ada's Technical Books website.">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>This is a Drupal website for a bookstore. It features custom content types, roles, basic theming, and the Features and Views module. This site is hosted by <a href="https://pantheon.io/" target="_blank">Pantheon</a>.</p>
+                            <a href="http://live-adas-technical-books.pantheon.io/" target="_blank"><button class="btn btn-success btn-lg">View Project</button></a>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong>Epicodus/Personal
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>May 2015
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Service:d
+                                    <strong>Drupal
                                     </strong>
                                 </li>
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>Close</button>
                         </div>
                     </div>
                 </div>
@@ -337,21 +348,22 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Adopt an Epicoder</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/adopt-an-epicoder.png" class="img-responsive img-centered" alt="Screenshot of the Adopt An Epicoder website.">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>This is a Drupal website for the mock charity Adopt an Epicoder, where users can donate to fund junior developers. The site is based off of the Commerce Kickstart package and uses a custom theme created from the Omega theme. The website includes a display of products by product type, and a taxonomy-based menu to organize and display content.</p>
+                            <a href="http://dev-adopt-an-epicoder.pantheon.io/" target="_blank"><button class="btn btn-success btn-lg">View Project</button></a>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong>Epicodus Group Project
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>June 2015</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Technologies:
+                                    <strong>Drupal, PHP, CSS
                                     </strong>
                                 </li>
                             </ul>
@@ -374,21 +386,22 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Order A Pizza</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/pizza.png" class="img-responsive img-centered" alt="A screenshot of the Order A Pizza app.">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>This project mimics a website that allows a user to order a pizza. Users can select different options for toppings, crust, and size, and the app calculates the price based on selection.</p>
+                            <a href="http://jillkuchman.com/pizza" target="_blank"><button class="btn btn-success btn-lg">View Project</button></a>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong>Epicodus/Personal
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>April 2015</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Technologies:
+                                    <strong>JavaScript, jQuery, CSS, HTML, Bootstrap
                                     </strong>
                                 </li>
                             </ul>
@@ -411,21 +424,22 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Tamacrotchety</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/tamacrotchety.png" class="img-responsive img-centered" alt="A screenshot of the Tamacrotchety app.">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>This project emulates a Tamagotchi game. The user creates a crotchety Tamagotchi-like creature with health levels and can interact with it in various ways to keep it alive. This project demonstrates writing methods for objects in JavaScript and calling those methods using jQuery.</p>
+                            <a href="http://jillkuchman.com/tamacrotchety/" target="_blank"><button class="btn btn-success btn-lg">View Project</button></a>        
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong>Epicodus/Personal
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>April 2015
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Technologies:
+                                    <strong>JavaScript, jQuery, HTML, CSS, Bootstrap
                                     </strong>
                                 </li>
                             </ul>
@@ -448,21 +462,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Epifoodus</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/epifoodus.png" class="img-responsive img-centered" alt="A screenshot of the Epifoodus app.">
+                            <p>This project removes the decision making from choosing a place to eat by randomly suggesting two restaurants from a database. Users can create a profile and save preferences. I handled user profile creation with password verification.</p><a href="https://epifoodus.herokuapp.com/" target="_blank"><button class="btn btn-success btn-lg">View Project</button></a>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong>Epicodus/Personal
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>March 2015
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Technologies:
+                                    <strong>PHP, PSQL, HTML, CSS, Bootstrap
                                     </strong>
                                 </li>
                             </ul>
@@ -491,15 +505,15 @@
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong>Start Bootstrap
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>April 2014
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong>Web Development
                                     </strong>
                                 </li>
                             </ul>
